--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev-development": "cp env.development .env && bun dev",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "biome format . --write"
+    "format": "biome format . --write"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@tanstack/react-query": "^5.76.1",
+    "clsx": "^2.1.1",
+    "next": "15.3.2",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-loading-skeleton": "^3.5.0",
+    "zod": "^3.25.20",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
