--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "bradlc.vscode-tailwindcss",
     "biomejs.biome",
-    "irongeek.vscode-env"
+    "irongeek.vscode-env",
+    "johnpapa.vscode-peacock"
   ]
 }
