--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,16 @@
   },
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome"
+  },
+  "peacock.affectActivityBar": false,
+  "peacock.affectTitleBar": false,
+  "peacock.color": "#f9e64f",
+  "workbench.colorCustomizations": {
+    "sash.hoverBorder": "#fbed80",
+    "statusBar.background": "#f9e64f",
+    "statusBar.foreground": "#15202b",
+    "statusBarItem.hoverBackground": "#f7df1e",
+    "statusBarItem.remoteBackground": "#f9e64f",
+    "statusBarItem.remoteForeground": "#15202b"
   }
 }
